# adk-samples-capstone

./: .gitignore  README.md  agents.xlsx  dashboard.py  output.json  pyproject.toml  ref.diff  requirements.txt
python/agents/RAG/: README.md  pyproject.toml
python/agents/RAG/deployment/: deploy.py  run.py
python/agents/RAG/eval/: test_eval_arize.py
python/agents/RAG/rag/: __init__.py  agent.py  prompts.py  tracing.py
python/agents/academic-research/: README.md  pyproject.toml
python/agents/academic-research/academic_research/: __init__.py
python/agents/agent-observability-bq/: .env.example  Makefile  README.md  pyproject.toml
python/agents/agent-observability-bq/agent_observability_bq/: __init__.py  agent.py
python/agents/agent-observability-bq/tests/: test_agent.py
python/agents/agent-skills-tutorial/: README.md  pyproject.toml
python/agents/agent-skills-tutorial/app/: agent.py
python/agents/ai-security-agent/: README.md  pyproject.toml
python/agents/ai-security-agent/llm_red_team_agent/: __init__.py
python/agents/airflow_version_upgrade_agent/: .env  .env.example  Makefile  README.md  pyproject.toml
python/agents/airflow_version_upgrade_agent/airflow_version_upgrade_agent/: __init__.py  agent.py  prompts.py
python/agents/airflow_version_upgrade_agent/deployment/: setup_vertex_ai_search.py
python/agents/ambient-expense-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
python/agents/ambient-expense-agent/expense_agent/: __init__.py  agent.py  config.py  fast_api_app.py
python/agents/ambient-expense-agent/frontend/: Dockerfile  main.py  pyproject.toml
python/agents/ambient-expense-agent/terraform/: .terraform.lock.hcl  cloud_run.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  pubsub.tf  variables.tf
python/agents/ambient-expense-agent/tests/: test_integration.py
python/agents/antom-payment/: README.md  pyproject.toml
python/agents/antom-payment/antom-payemnt-agent/: __init__.py  agent.py
python/agents/auto-insurance-agent/: README.md  pyproject.toml
python/agents/auto-insurance-agent/deployment/: deploy.py  test_deployment.py
python/agents/bidi-demo/: README.md  pyproject.toml
python/agents/bidi-demo/app/: main.py
python/agents/blog-writer/: README.md  pyproject.toml
python/agents/blog-writer/blogger_agent/: __init__.py  tools.py  validation_checkers.py
python/agents/blog-writer/eval/: README.md  test_eval.py
python/agents/blog-writer/tests/: README.md  test_agent.py
python/agents/brand-aligned-presentations/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
python/agents/brand-aligned-presentations/deployment/: deploy.py
python/agents/brand-aligned-presentations/docs/: Proposal_Template.pptx  architecture_diagram.md  pptx_template_guide.md
python/agents/brand-aligned-presentations/eval/: eval_pipeline.py
python/agents/brand-aligned-presentations/presentation_agent/: agent.py  prompt.py
python/agents/brand-aligned-presentations/tests/: test_agent.py  test_artifact_utils.py  test_citation_flow.py  test_citations_notes.py  test_config.py  test_deep_research.py  test_e2e_comprehensive.py  test_e2e_state_flow.py  test_model_armor.py  test_models.py  test_pptx_editor.py  test_presentation_citations.py  test_presentation_orchestrator.py  test_rag.py  test_research_and_citations.py  test_research_programmatic_urls.py  test_synthesizer.py  test_tools.py  test_utils.py  test_visual_generator.py
python/agents/brand-aligner/: Makefile  README.md  agent.py  pyproject.toml
python/agents/brand-aligner/brand_aligner_agent/: __init__.py  agent.py  models.py  services.py  tools.py  utils.py
python/agents/brand-aligner/deployment/: deploy.py
python/agents/brand-search-optimization/: README.md  pyproject.toml  sitecustomize.py
python/agents/brand-search-optimization/brand_search_optimization/: __init__.py
python/agents/camel/: README.md  pyproject.toml
python/agents/camel/camel/: agent.py
python/agents/claim-adjudication-agent/: .env.example  README.md  pyproject.toml
python/agents/claim-adjudication-agent/claim_adjudication_agent/: __init__.py  agent.py  prompt.py
python/agents/claim-adjudication-agent/deployment/: deploy.py  test_deployment.py
python/agents/claim-adjudication-agent/eval/: test_eval.py
python/agents/claim-adjudication-agent/tests/: test_agents.py
python/agents/currency-agent/: README.md  pyproject.toml
python/agents/currency-agent/currency_agent/: agent.py
python/agents/customer-service/: README.md  pyproject.toml
python/agents/customer-service/customer_service/: __init__.py  agent.py
python/agents/data-engineering/: README.md  pyproject.toml
python/agents/data-engineering/data_engineering_agent/: __init__.py  agent.py  config.py
python/agents/data-engineering/deployment/: deploy.py  test_deployment.py
python/agents/data-science/: README.md  main.py  pyproject.toml
python/agents/data-science/data_science/: __init__.py  agent.py
python/agents/data-science/deployment/: deploy.py  test_deployment.py
python/agents/data-science/tests/: test_agents.py
python/agents/earth-engine-geospatial/: .env.example  README.md  pyproject.toml
python/agents/earth-engine-geospatial/earth_engine_geospatial/: agent.py  prompt.py  tools.py
python/agents/economic-research-agent/: .env.example  Makefile  README.md  mcp_server.py  pyproject.toml  requirements.txt
python/agents/economic-research-agent/economic_research/: __init__.py  (+2 more)
python/agents/financial-advisor/: README.md  pyproject.toml
python/agents/fomc-research/: README.md  pyproject.toml
python/agents/fun-facts/: .env.example  README.md  pyproject.toml
python/agents/global-kyc-agent/: .env.example  .gitignore  README.md  eval_config.json  fix_eval.py  main.py  merge.py  parse_eval.py  pyproject.toml  save_diagram.py
python/agents/google-trends-agent/: README.md  pyproject.toml
python/agents/hierarchical-workflow-automation/: .env-template  README.md  deploy_agent.py  pyproject.toml
python/agents/high-volume-document-analyzer/: README.md  pyproject.toml
(+1058 files in other folders)
