[project]
name = "agent-observability-bq"
version = "0.1.0"
description = "Agent Observability with BigQuery Analytics Plugin Sample"
authors = [
    { name = "Google Developers" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "google-cloud-aiplatform[adk,agent_engine]>=1.93.0",
    "google-cloud-bigquery>=3.20.0",
    "pydantic>=2.7.0",
    "google-auth>=2.30.0",
    "python-dotenv>=1.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3"
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["agent_observability_bq"]

[tool.agent-starter-pack]
example_question = "What are the most popular programming languages on GitHub based on the bigquery-public-data dataset?"

[tool.agent-starter-pack.settings]
agent_directory = "agent_observability_bq"
bq_analytics = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
