[project]
name = "agent-skills-tutorial"
version = "0.1.0"
description = "ADK agent demonstrating 4 skill patterns: inline skills, file-based skills, external skills, and meta skills (skill-creator). Uses SkillToolset for progressive disclosure."
authors = [{ name = "Lavi Nigam", email = "nicklavi@google.com" }]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "google-adk>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[dependency-groups]
dev = [
    "google-adk[eval]>=1.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
