[project]
name = "ai-security-agent"
version = "0.1.0"
description = "A sophisticated multi-agent system for comprehensive AI safety testing and vulnerability assessment"
authors = [
    { name = "Google LLC" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "google-adk>=1.18.0",
    "google-genai>=1.9.0",
    "google-cloud-aiplatform>=1.127.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "google-adk[eval]>=1.0.0",
    "ruff>=0.4.6",
    "mypy>=1.18.2",
    "agent-starter-pack>=0.32.0",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["llm_red_team_agent", "app"]

[tool.hatch.build.targets.wheel]
packages = ["llm_red_team_agent", "app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.agent-starter-pack]
example_question = "Run a red team security test for the Toxicity risk category."

[tool.agent-starter-pack.settings]
agent_directory = "llm_red_team_agent"
deployment_targets = ["agent_engine", "cloud_run"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
