[project]
name = "ambient-expense-agent"
version = "0.1.0"
description = "An ambient agent that processes expense reports via Pub/Sub triggers, auto-approving expenses under $100 and flagging high-value ones for review using ADK 2.0 graph-based workflows."
authors = [
    {name = "Elia Secchi", email = "eliasecchi@google.com"},
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.11,<3.13"

dependencies = [
    "google-adk>=2.0.0a0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.4.6",
    "mypy>=1.19.0",
    "codespell>=2.4.1",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["expense_agent"]

[tool.codespell]
skip = "uv.lock,.venv,./frontend"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
follow_imports = "silent"
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["misc", "no-untyped-call", "no-any-return"]
exclude = [".venv"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["expense_agent"]

[tool.agent-starter-pack]
base_template = "adk_base"
example_question = "Process this expense: $250 flight to NYC for client meeting"
deployment_targets = ["cloud_run"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
