[project]
name = "antom-payment"
version = "0.1.0"
description = "Integrates Ant International's Antom payment APIs, enabling AI assistants to handle payment and refund operations seamlessly."
authors = [
    { name = "Steven", email = "duanmuci@ant-intl.com" },
    { name = "Zunjiao Wang", email = "wangzunjiao.wzj@digital-engine.com" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]

dependencies = [
    "google-adk>=1.11.0",
    "mcp>=1.13.0",
]

dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "google-adk[eval]>=1.0.0",
    "nest-asyncio>=1.6.0",
    "agent-starter-pack>=0.14.1",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
# CRITICAL: This tells Ruff that 'antom_payment' is THIS sample's code
known-first-party = ["antom_payment"]

[tool.hatch.build.targets.wheel]
packages = ["antom_payment"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.agent-starter-pack]
example_question = "Create a payment link for a $25 coffee order and send me the details."

[tool.agent-starter-pack.settings]
agent_directory = "antom_payemnt_agent"