[project]
name = "auto-insurance-agent"
version = "0.1.0"
description = "AI agent for auto insurance using Apigee API Hub for tools"
authors = [
    { name = "David Rush", email = "davidrush@google.com" }
]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.5.0,<2.0.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.100.0,<2.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "google-cloud-secret-manager>=2.24.0,<3.0.0",
]

[dependency-groups]
dev = [
    "google-adk>=1.5.0,<2.0.0",
]
deployment = [
    "absl-py>=2.2.2",
    "google-cloud-aiplatform[adk,agent-engines]>=1.100.0",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["auto_insurance_agent"]

[tool.agent-starter-pack.settings]
agent_directory = "auto_insurance_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"