[project]
name = "data-engineering-agent"
version = "0.1.0"
description = "Data Engineering Agent - LLM Agent that can build Dataform pipelines."
authors = [
    { name = "Samet Karadag", email = "sametkaradag@google.com"},
    { name = "Saurabh Maurya", email = "saurabhmaurya@google.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "env>=0.1.0,<0.2.0",
    "google-cloud-bigquery>=3.11.4",
    "google-cloud-dataform>=0.4.0",
    "google-api-core>=2.15.0",
    "google-auth>=2.23.0",
    "google-cloud-core>=2.3.3",
    "protobuf>=4.24.4",
    "typing-extensions>=4.8.0",
    "python-dotenv>=1.0.0",
    "google-adk>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "google-adk[eval]>=1.0.0",
    "agent-starter-pack>=0.14.1",
]
deployment = [
    "absl-py>=2.2.1",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint]
ignore = ["C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["data_engineering_agent"]

[tool.agent-starter-pack]
example_question = "Enrich the new_york_taxi_trips.tlc_green_trips_2022 table by generating date and time features from the pickup_datetime column."

[tool.agent-starter-pack.settings]
agent_directory = "data_engineering_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
